--- a/html/Index.html
+++ b/html/Index.html
@@ -18,7 +18,7 @@
  
                 <a class="navbar-brand" href="index.html">News.</a>
             </div>
-            <div class="col-sm-2"></div>
+            <div class="col-sm-3"></div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav ">
@@ -34,26 +34,7 @@
                     <li>
                         <a href="contact.html">Science &amp Tech</a>
                     </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="portfolio-1-col.html">1 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-2-col.html">2 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-3-col.html">3 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-4-col.html">4 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-item.html">Single Portfolio Item</a>
-                            </li>
-                        </ul>
-                    </li>
+
 
 
                 </ul>
@@ -63,16 +44,16 @@
         <!-- /.container -->
     </nav>
 
-    <footer class="container">
-   						<ul class="social-icons">
-       				 		<li><a class="text"> Follow us on    :     </a></li>
-        			 		<li><a href="" class="social-icon"> <i class="fa fa-facebook"> </i></a></li>
-         			 		<li><a href="" class="social-icon"> <i class="fa fa-twitter"> </i></a></li>
-        			 		<li><a href="" class="social-icon"> <i class="fa fa-rss"></i> </a></li>
-        			 		<li><a href="" class="social-icon"> <i class="fa fa-youtube"> </i></a></li>
-        			 		<li><a href="" class="social-icon"> <i class="fa fa-linkedin"> </i></a></li>
-        			 		<li><a href="" class="social-icon"> <i class="fa fa-google-plus"> </i></a></li>
-   				 		</ul>
+    <footer class="container col-sm-12">
+   						<div class="social-icons">
+       				 		<a class="text"> Follow us on    :     </a>
+        			 		<a href="" class="social-icon"> <i class="fa fa-facebook"> </i></a>
+         			 		<a href="" class="social-icon"> <i class="fa fa-twitter"> </i></a>
+        			 		<a href="" class="social-icon"> <i class="fa fa-rss"></i> </a>
+        			 		<a href="" class="social-icon"> <i class="fa fa-youtube"> </i></a>
+        			 		<a href="" class="social-icon"> <i class="fa fa-linkedin"> </i></a>
+        			 		<a href="" class="social-icon"> <i class="fa fa-google-plus"> </i></a>
+   				 		</div>
     </footer>
 </body>
 </html>
