--- a/html/Index.html
+++ b/html/Index.html
@@ -1,60 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
-    <link href="../css/custom.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </head>
+<head>
+	<meta charset="utf-8"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
+	<link href="../css/custom.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
- 
-                <a class="navbar-brand" href="index.html">News.</a>
-            </div>
-            <div class="col-sm-3"></div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav ">
-                    <li>
-                        <a href="about.html">World</a>
-                    </li>
-                    <li>
-                        <a href="services.html">Business</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Entertainment</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Science &amp Tech</a>
-                    </li>
+<body>
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="container">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+
+				<a class="navbar-brand" href="index.html">News.</a>
+			</div>
+			<div class="col-sm-3"></div>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav ">
+					<li>
+						<a href="world.html">World</a>
+					</li>
+					<li>
+						<a href="business.html">Business</a>
+					</li>
+					<li>
+						<a href="sport.html">Sport</a>
+					</li>
+					<li>
+						<a href="entertainment.html">Entertainment</a>
+					</li>
+					<li>
+						<a href="sciencetech.html">Science &amp Tech</a>
+					</li>
+					<li>
+						<a href="travel.html">Travel</a>
+					</li>
 
 
 
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container -->
+	</nav>
+	
+	<header id="Carousel" class="carousel slide">
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+			<li data-target="#Carousel" data-slide-to="0" class="active"></li>
+			<li data-target="#Carousel" data-slide-to="1"></li>
+			<li data-target="#Carousel" data-slide-to="2"></li>
+		</ol>
 
-    <footer class="container col-sm-12">
-   						<div class="social-icons">
-       				 		<a class="text"> Follow us on    :     </a>
-        			 		<a href="" class="social-icon"> <i class="fa fa-facebook"> </i></a>
-         			 		<a href="" class="social-icon"> <i class="fa fa-twitter"> </i></a>
-        			 		<a href="" class="social-icon"> <i class="fa fa-rss"></i> </a>
-        			 		<a href="" class="social-icon"> <i class="fa fa-youtube"> </i></a>
-        			 		<a href="" class="social-icon"> <i class="fa fa-linkedin"> </i></a>
-        			 		<a href="" class="social-icon"> <i class="fa fa-google-plus"> </i></a>
-   				 		</div>
-    </footer>
-</body>
-</html>
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner">
+			<div class="item active">
+				<div class="fill" style="background-image:url('../Images/putin-trump.jpeg');"></div>
+				<div class="carousel-caption">
+					<h2>Trump: US-Russia relations are at 'dangerous low'</h2>
+				</div>
+			</div>
+			<div class="item">
+				<div class="fill" style="background-image:url('../Images/statue-of-liberty.jpg');"></div>
+				<div class="carousel-caption">
+					<h2>Statue of Liberty caught in White House immigration row</h2>
+				</div>
+			</div>
+			<div class="item">
+				<div class="fill" style="background-image:url('../Images/Mr-Trinh.jpg');"></div>
+				<div class="carousel-caption">
+					<h2>Vietnam 'kidnap victim' Trinh Xuan Thanh appears on TV</h2>
+				</div>
+			</div>
+
+		</div>
+
+		<!-- Controls -->
+		<a class="left carousel-control" href="#Carousel" data-slide="prev">
+			<span class="icon-prev"></span>
+		</a>
+		<a class="right carousel-control" href="#Carousel" data-slide="next">
+			<span class="icon-next"></span>
+		</a>
+	</header>
+	
+
+	<div>
+		<h1  class = "BreakingNews"> Breaking News.</h1>
+
+
+					</div>
+
+
+					<!-- More Information  -->
+					<div class ="info col-md-8">
+						<div class="row">
+							<div class="col-lg-12">
+							</div>
+							<div class="col-md-6">
+								<div class="panel panel-default">
+									<div class="panel-heading">
+										<h4><i class="fa fa-fw fa-briefcase"></i> Business.</h4>
+									</div>
+									<div class="panel-body">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+										<a href="#" class="btn btn-default">More..</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="panel panel-default">
+									<div class="panel-heading">
+										<h4><i class="fa fa-fw fa-futbol-o"></i> Sport.</h4>
+									</div>
+									<div class="panel-body">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+										<a href="#" class="btn btn-default">Learn More</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="panel panel-default">
+									<div class="panel-heading">
+										<h4><i class="fa fa-fw fa-television "></i> Entertainment.</h4>
+									</div>
+									<div class="panel-body">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+										<a href="#" class="btn btn-default">Learn More</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="panel panel-default">
+									<div class="panel-heading">
+										<h4><i class="fa fa-fw fa-flask"></i> Science &amp Tech.</h4>
+									</div>
+									<div class="panel-body">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+										<a href="#" class="btn btn-default">Learn More</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="panel panel-default">
+									<div class="panel-heading">
+										<h4><i class="fa fa-fw fa-plane"></i> Travel.</h4>
+									</div>
+									<div class="panel-body">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+										<a href="#" class="btn btn-default">Learn More</a>
+									</div>
+								</div>
+							</div>
+						</div>
+
+
+					</div>
+					<!-- End News Section -->
+
+					<!-- Start side extra information section  -->
+					<div class = "ExtraInfo col-md-4 row">
+						<div class="col-md-12">
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<h4><i class="fa fa-fw fa-cloud"></i> Weather</h4>
+								</div>
+								<div class="panel-body">
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+									<a href="#" class="btn btn-default">Learn More</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<h4><i class="fa fa-fw fa-line-chart"></i> Nifty</h4>
+								</div>
+								<div class="panel-body">
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+									<a href="#" class="btn btn-default">Learn More</a>
+								</div>
+							</div>
+						</div>
+
+					</div>
+
+
+					<!-- End side extra information section  -->
+
+
+					<footer class="container col-sm-12 ">
+						<div class="social-icons">
+							<a class="text"> Follow us on    :     </a>
+							<a href="" class="social-icon"> <i class="fa fa-facebook"> </i></a>
+							<a href="" class="social-icon"> <i class="fa fa-twitter"> </i></a>
+							<a href="" class="social-icon"> <i class="fa fa-rss"></i> </a>
+							<a href="" class="social-icon"> <i class="fa fa-youtube"> </i></a>
+							<a href="" class="social-icon"> <i class="fa fa-linkedin"> </i></a>
+							<a href="" class="social-icon"> <i class="fa fa-google-plus"> </i></a>
+						</div>
+					</footer>
+				</body>
+				</html>
 
