--- a/html/Index.html
+++ b/html/Index.html
@@ -93,119 +93,124 @@
 
 	<div>
 		<h1  class = "BreakingNews"> Breaking News.</h1>
+		<div class = "BreakingNewsPanel col-md-12">
+			<div class = "NewsItem col-md-3">
+				<div class ="NewsImage" style="background-image:url('../Images/Mr-Trinh.jpg');" >
+					
+				</div>
 
+			</div>
+		</div>
+	</div>
 
+	<!-- More Information  -->
+	<div class ="info col-md-8">
+		<div class="row">
+			<div class="col-lg-12">
+			</div>
+			<div class="col-md-6">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h4><i class="fa fa-fw fa-briefcase"></i> Business.</h4>
 					</div>
-
-
-					<!-- More Information  -->
-					<div class ="info col-md-8">
-						<div class="row">
-							<div class="col-lg-12">
-							</div>
-							<div class="col-md-6">
-								<div class="panel panel-default">
-									<div class="panel-heading">
-										<h4><i class="fa fa-fw fa-briefcase"></i> Business.</h4>
-									</div>
-									<div class="panel-body">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-										<a href="#" class="btn btn-default">More..</a>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="panel panel-default">
-									<div class="panel-heading">
-										<h4><i class="fa fa-fw fa-futbol-o"></i> Sport.</h4>
-									</div>
-									<div class="panel-body">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-										<a href="#" class="btn btn-default">Learn More</a>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="panel panel-default">
-									<div class="panel-heading">
-										<h4><i class="fa fa-fw fa-television "></i> Entertainment.</h4>
-									</div>
-									<div class="panel-body">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-										<a href="#" class="btn btn-default">Learn More</a>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="panel panel-default">
-									<div class="panel-heading">
-										<h4><i class="fa fa-fw fa-flask"></i> Science &amp Tech.</h4>
-									</div>
-									<div class="panel-body">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-										<a href="#" class="btn btn-default">Learn More</a>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="panel panel-default">
-									<div class="panel-heading">
-										<h4><i class="fa fa-fw fa-plane"></i> Travel.</h4>
-									</div>
-									<div class="panel-body">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-										<a href="#" class="btn btn-default">Learn More</a>
-									</div>
-								</div>
-							</div>
-						</div>
-
-
+					<div class="panel-body">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+						<a href="#" class="btn btn-default">More..</a>
 					</div>
-					<!-- End News Section -->
-
-					<!-- Start side extra information section  -->
-					<div class = "ExtraInfo col-md-4 row">
-						<div class="col-md-12">
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<h4><i class="fa fa-fw fa-cloud"></i> Weather</h4>
-								</div>
-								<div class="panel-body">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-									<a href="#" class="btn btn-default">Learn More</a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<h4><i class="fa fa-fw fa-line-chart"></i> Nifty</h4>
-								</div>
-								<div class="panel-body">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-									<a href="#" class="btn btn-default">Learn More</a>
-								</div>
-							</div>
-						</div>
-
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h4><i class="fa fa-fw fa-futbol-o"></i> Sport.</h4>
 					</div>
+					<div class="panel-body">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+						<a href="#" class="btn btn-default">Learn More</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h4><i class="fa fa-fw fa-television "></i> Entertainment.</h4>
+					</div>
+					<div class="panel-body">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+						<a href="#" class="btn btn-default">Learn More</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h4><i class="fa fa-fw fa-flask"></i> Science &amp Tech.</h4>
+					</div>
+					<div class="panel-body">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+						<a href="#" class="btn btn-default">Learn More</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h4><i class="fa fa-fw fa-plane"></i> Travel.</h4>
+					</div>
+					<div class="panel-body">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+						<a href="#" class="btn btn-default">Learn More</a>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
-					<!-- End side extra information section  -->
+	</div>
+	<!-- End News Section -->
+
+	<!-- Start side extra information section  -->
+	<div class = "ExtraInfo col-md-4 row">
+		<div class="col-md-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4><i class="fa fa-fw fa-cloud"></i> Weather</h4>
+				</div>
+				<div class="panel-body">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+					<a href="#" class="btn btn-default">Learn More</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4><i class="fa fa-fw fa-line-chart"></i> Nifty</h4>
+				</div>
+				<div class="panel-body">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+					<a href="#" class="btn btn-default">Learn More</a>
+				</div>
+			</div>
+		</div>
+
+	</div>
 
 
-					<footer class="container col-sm-12 ">
-						<div class="social-icons">
-							<a class="text"> Follow us on    :     </a>
-							<a href="" class="social-icon"> <i class="fa fa-facebook"> </i></a>
-							<a href="" class="social-icon"> <i class="fa fa-twitter"> </i></a>
-							<a href="" class="social-icon"> <i class="fa fa-rss"></i> </a>
-							<a href="" class="social-icon"> <i class="fa fa-youtube"> </i></a>
-							<a href="" class="social-icon"> <i class="fa fa-linkedin"> </i></a>
-							<a href="" class="social-icon"> <i class="fa fa-google-plus"> </i></a>
-						</div>
-					</footer>
-				</body>
-				</html>
+	<!-- End side extra information section  -->
+
+
+	<footer class="container col-sm-12 ">
+		<div class="social-icons">
+			<a class="text"> Follow us on    :     </a>
+			<a href="" class="social-icon"> <i class="fa fa-facebook"> </i></a>
+			<a href="" class="social-icon"> <i class="fa fa-twitter"> </i></a>
+			<a href="" class="social-icon"> <i class="fa fa-rss"></i> </a>
+			<a href="" class="social-icon"> <i class="fa fa-youtube"> </i></a>
+			<a href="" class="social-icon"> <i class="fa fa-linkedin"> </i></a>
+			<a href="" class="social-icon"> <i class="fa fa-google-plus"> </i></a>
+		</div>
+	</footer>
+</body>
+</html>
 
