--- a/html/Index.html
+++ b/html/Index.html
@@ -95,8 +95,26 @@
 		<h1  class = "BreakingNews"> Breaking News.</h1>
 		<div class = "BreakingNewsPanel col-md-12">
 			<div class = "NewsItem col-md-3">
-				<div class ="NewsImage" style="background-image:url('../Images/Mr-Trinh.jpg');" >
-					
+				<div class ="NewsImage" style="background-image:url('../Images/luisa-ortega.jpg');" >
+				<div class="NewsItemText">Luisa Ortega</div>
+				</div>
+
+			</div>
+			<div class = "NewsItem col-md-3">
+				<div class ="NewsImage" style="background-image:url('../Images/hair-thieves.jpg');" >
+				<div class="NewsItemText">Hair Thieves</div>
+				</div>
+
+			</div>
+			<div class = "NewsItem col-md-3">
+				<div class ="NewsImage" style="background-image:url('../Images/moth.jpg');" >
+				<div class="NewsItemText">Moths</div>	
+				</div>
+
+			</div>
+			<div class = "NewsItem col-md-3">
+				<div class ="NewsImage" style="background-image:url('../Images/australian-nurse.jpg');" >
+				<div class="NewsItemText">Surrogate Australian Nurse</div>	
 				</div>
 
 			</div>
@@ -114,7 +132,11 @@
 						<h4><i class="fa fa-fw fa-briefcase"></i> Business.</h4>
 					</div>
 					<div class="panel-body">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+						<p>
+						<h4><a href = "http://www.bbc.com/news/live/business-40853317">Business Live: FTSE 100 falls again</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40895079">Snap shares plunge 14% as losses mount</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40887040">Wall Street lower on US-North Korea tensions</a></h4>
+						</p>
 						<a href="#" class="btn btn-default">More..</a>
 					</div>
 				</div>
@@ -125,8 +147,12 @@
 						<h4><i class="fa fa-fw fa-futbol-o"></i> Sport.</h4>
 					</div>
 					<div class="panel-body">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-						<a href="#" class="btn btn-default">Learn More</a>
+						<p>
+						<h4><a href = "http://www.bbc.com/news/live/business-40853317">Business Live: FTSE 100 falls again</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40895079">Snap shares plunge 14% as losses mount</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40887040">Wall Street lower on US-North Korea tensions</a></h4>
+						</p>
+						<a href="#" class="btn btn-default">More...</a>
 					</div>
 				</div>
 			</div>
@@ -136,8 +162,12 @@
 						<h4><i class="fa fa-fw fa-television "></i> Entertainment.</h4>
 					</div>
 					<div class="panel-body">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-						<a href="#" class="btn btn-default">Learn More</a>
+						<p>
+						<h4><a href = "http://www.bbc.com/news/live/business-40853317">Business Live: FTSE 100 falls again</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40895079">Snap shares plunge 14% as losses mount</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40887040">Wall Street lower on US-North Korea tensions</a></h4>
+						</p>
+						<a href="#" class="btn btn-default">More...</a>
 					</div>
 				</div>
 			</div>
@@ -147,8 +177,12 @@
 						<h4><i class="fa fa-fw fa-flask"></i> Science &amp Tech.</h4>
 					</div>
 					<div class="panel-body">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-						<a href="#" class="btn btn-default">Learn More</a>
+						<p>
+						<h4><a href = "http://www.bbc.com/news/live/business-40853317">Business Live: FTSE 100 falls again</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40895079">Snap shares plunge 14% as losses mount</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40887040">Wall Street lower on US-North Korea tensions</a></h4>
+						</p>
+						<a href="#" class="btn btn-default">More...</a>
 					</div>
 				</div>
 			</div>
@@ -158,8 +192,12 @@
 						<h4><i class="fa fa-fw fa-plane"></i> Travel.</h4>
 					</div>
 					<div class="panel-body">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-						<a href="#" class="btn btn-default">Learn More</a>
+						<p>
+						<h4><a href = "http://www.bbc.com/news/live/business-40853317">Business Live: FTSE 100 falls again</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40895079">Snap shares plunge 14% as losses mount</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40887040">Wall Street lower on US-North Korea tensions</a></h4>
+						</p>
+						<a href="#" class="btn btn-default">More...</a>
 					</div>
 				</div>
 			</div>
@@ -177,8 +215,12 @@
 					<h4><i class="fa fa-fw fa-cloud"></i> Weather</h4>
 				</div>
 				<div class="panel-body">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-					<a href="#" class="btn btn-default">Learn More</a>
+					<p>
+					<h4><a href = "http://www.bbc.com/news/live/business-40853317">Business Live: FTSE 100 falls again</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40895079">Snap shares plunge 14% as losses mount</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40887040">Wall Street lower on US-North Korea tensions</a></h4>
+					</p>
+					<a href="#" class="btn btn-default">More...</a>
 				</div>
 			</div>
 		</div>
@@ -188,8 +230,12 @@
 					<h4><i class="fa fa-fw fa-line-chart"></i> Nifty</h4>
 				</div>
 				<div class="panel-body">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-					<a href="#" class="btn btn-default">Learn More</a>
+					<p>
+						<h4><a href = "http://www.bbc.com/news/live/business-40853317">Business Live: FTSE 100 falls again</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40895079">Snap shares plunge 14% as losses mount</a></h4>
+						<h4><a href = "http://www.bbc.com/news/business-40887040">Wall Street lower on US-North Korea tensions</a></h4>
+					</p>
+					<a href="#" class="btn btn-default">More...</a>
 				</div>
 			</div>
 		</div>
@@ -210,6 +256,7 @@
 			<a href="" class="social-icon"> <i class="fa fa-linkedin"> </i></a>
 			<a href="" class="social-icon"> <i class="fa fa-google-plus"> </i></a>
 		</div>
+		<a href="" class="center">About | Contact Us</a>
 	</footer>
 </body>
 </html>
