--- a/html/Index.html
+++ b/html/Index.html
@@ -93,26 +93,26 @@
 
 	<div>
 		<h1  class = "BreakingNews"> Breaking News.</h1>
-		<div class = "BreakingNewsPanel col-md-12">
-			<div class = "NewsItem col-md-3">
+		<div class = "BreakingNewsPanel col-lg-12 col-md-12 col-sm-12">
+			<div class = "NewsItem col-lg-3 col-md-6 col-sm-6">
 				<div class ="NewsImage" style="background-image:url('../Images/luisa-ortega.jpg');" >
 				<div class="NewsItemText">Luisa Ortega</div>
 				</div>
 
 			</div>
-			<div class = "NewsItem col-md-3">
+			<div class = "NewsItem col-lg-3 col-md-6 col-sm-6">
 				<div class ="NewsImage" style="background-image:url('../Images/hair-thieves.jpg');" >
 				<div class="NewsItemText">Hair Thieves</div>
 				</div>
 
 			</div>
-			<div class = "NewsItem col-md-3">
+			<div class = "NewsItem col-lg-3 col-md-6 col-sm-6">
 				<div class ="NewsImage" style="background-image:url('../Images/moth.jpg');" >
 				<div class="NewsItemText">Moths</div>	
 				</div>
 
 			</div>
-			<div class = "NewsItem col-md-3">
+			<div class = "NewsItem col-lg-3 col-md-6 col-sm-6">
 				<div class ="NewsImage" style="background-image:url('../Images/australian-nurse.jpg');" >
 				<div class="NewsItemText">Surrogate Australian Nurse</div>	
 				</div>
@@ -122,11 +122,10 @@
 	</div>
 
 	<!-- More Information  -->
-	<div class ="info col-md-8">
+	<div class ="info col-lg-8">
 		<div class="row">
-			<div class="col-lg-12">
-			</div>
-			<div class="col-md-6">
+			
+			<div class="col-lg-6">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h4><i class="fa fa-fw fa-briefcase"></i> Business.</h4>
@@ -141,7 +140,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6">
+			<div class="col-lg-6">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h4><i class="fa fa-fw fa-futbol-o"></i> Sport.</h4>
@@ -156,7 +155,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6">
+			<div class="col-lg-6">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h4><i class="fa fa-fw fa-television "></i> Entertainment.</h4>
@@ -171,7 +170,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6">
+			<div class="col-lg-6">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h4><i class="fa fa-fw fa-flask"></i> Science &amp Tech.</h4>
@@ -186,7 +185,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6">
+			<div class="col-lg-6">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h4><i class="fa fa-fw fa-plane"></i> Travel.</h4>
@@ -208,8 +207,8 @@
 	<!-- End News Section -->
 
 	<!-- Start side extra information section  -->
-	<div class = "ExtraInfo col-md-4 row">
-		<div class="col-md-12">
+	<div class = "ExtraInfo col-lg-4 row">
+		<div class="col-lg-12 col-md-4 col-sm-4">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h4><i class="fa fa-fw fa-cloud"></i> Weather</h4>
@@ -224,7 +223,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-12">
+		<div class="col-lg-12 col-md-4 col-sm-4">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h4><i class="fa fa-fw fa-line-chart"></i> Nifty</h4>
